--- a/headerstyle.css
+++ b/headerstyle.css
@@ -72,7 +72,31 @@
   		right: -170px;
   		font-size: 36px;
   		margin-left: 20px;
-}
+	}
+	#fallback {
+		position: fixed;
+  		display: none;
+  		width: 100%;
+  		height: 100%;
+  		top: 0;
+  		left: 0;
+  		right: 0;
+  		bottom: 0;
+ 		background-color: rgba(255,254,254,0.90);
+  		z-index: 2;
+  		cursor: pointer;
+	}
+	#text{
+  		position: absolute;
+  		top: 50%;
+  		left: 50%;
+		font-family: Helvetica Neue;
+  		font-style: normal;
+		font-weight: bold;
+  		color: rgba(0,0,0,1);
+  		transform: translate(-50%,-50%);
+  		-ms-transform: translate(-50%,-50%);
+	}
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
