--- a/headerstyle.css
+++ b/headerstyle.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 /* CSS Document */
+<meta name=”viewport” content=”width=device-width, initial-scale=1″>
 
 	#Group_797 {
 		position: absolute;
